# legacy

./: CMakeLists.txt  DetectARCH.cmake  DetectOS.cmake  README.md  Silexars.cmake  Silexars.h
AEngine/: AEngine.h  CMakeLists.txt  Engine.cpp  Engine.h
AEngine/Cinema/: Camera.Cube.cpp  Camera.Cube.h  Camera.Mono.cpp  Camera.Mono.h  Camera.Stereo.cpp  Camera.Stereo.h  Camera.cpp  Camera.h  Cinema.h  CinemaObject.cpp  CinemaObject.h  Object.Material.cpp  Object.Material.h  Object.cpp  Object.h  Scene.cpp  Scene.h
AEngine/Controllers/: Controller.cpp  Controller.h  Controllers.h
AEngine/Managers/: Managers.h  ResourceManager.cpp  ResourceManager.h
AEngine/Renderers/: AudioRenderer.h  GraphicsRenderer.Level0.cpp  GraphicsRenderer.Level0.h  GraphicsRenderer.Level1.h  GraphicsRenderer.cpp  GraphicsRenderer.h  PhysicsRenderer.h  Renderers.h
Data/: CMakeLists.txt  Data.h  String.cpp  String.h
Definitions/: Architecture.h  Atoms.h  Definitions.h  OS.h
Graphics/: CMakeLists.txt  Graphics.h
Graphics/API/: API.h  ClearProgram.cpp  (+11 more)
Graphics/Font/: CMakeLists.txt  Font.Glyph.cpp  Font.Glyph.h  Font.Map.cpp  Font.Map.h  Font.cpp  Font.h
Math/: CMakeLists.txt  Complex.cpp  Complex.h  Line3.cpp  Line3.h  Math.h  Plane3.h  Point3.cpp  Point3.h  Quaternion.cpp  Quaternion.h  Sphere3.cpp  Sphere3.h  functions.cpp  functions.h  mat2.cpp  mat2.h  mat3.cpp  mat3.h  mat4.cpp  mat4.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
System/: CMakeLists.txt  Process.ANDROID.cpp  Process.UNIX.cpp  Process.cpp  Process.h  System.h  Thread.cpp  Thread.h
etc/: etc.h
(+267 files in other folders)
